--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,18 @@
 .error{
     color:red;
 }
+
+.count button{
+    margin:15px;
+    width:100px;
+    -webkit-transition: 1s;
+}
+
+.count button:hover{
+    -webkit-transition: .1s;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2)
+}
+
+#app{
+    padding:40px;
+}
